Bad shading in edit mode. 2.90 regression #77607

Closed
opened 2020-06-08 09:24:19 +02:00 by Vyacheslav Kobozev · 26 comments

Blender Version
Broken: deaff945d0 (master, 2.90)
Worked: deaff945d0~

Short description of error
Simple file: bad shading edit1.blend

In 2.83:
42023030.png 42040737.png

In master (2.90):
42012130.png 42032636.png

**Blender Version** Broken: deaff945d0 (master, 2.90) Worked: deaff945d0~ **Short description of error** Simple file: [bad shading edit1.blend](https://archive.blender.org/developer/F8601585/bad_shading_edit1.blend) In 2.83: ![42023030.png](https://archive.blender.org/developer/F8601560/42023030.png) ![42040737.png](https://archive.blender.org/developer/F8601589/42040737.png) In master (2.90): ![42012130.png](https://archive.blender.org/developer/F8601561/42012130.png) ![42032636.png](https://archive.blender.org/developer/F8601586/42032636.png)

Added subscriber: @Vyach

Added subscriber: @Vyach

#77863 was marked as duplicate of this issue

#77863 was marked as duplicate of this issue

More info:
It can be fixed with autosmooth. So it is wrong behavior for fullsmooth normals.

2020-06-08_10-36-12.mp4

More info: It can be fixed with autosmooth. So it is wrong behavior for fullsmooth normals. [2020-06-08_10-36-12.mp4](https://archive.blender.org/developer/F8600660/2020-06-08_10-36-12.mp4)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Could you please provide a simpler sample file? Also an image comparison of how it looked before, and how it looks now.

Could you please provide a simpler sample file? Also an image comparison of how it looked before, and how it looks now.

42003005.png normals in this case are parallel

![42003005.png](https://archive.blender.org/developer/F8601150/42003005.png) normals in this case are parallel

Should look like this. Smoothed normals
42023030.png 42040737.png
————————————————————
Looks like this
42012130.png 42032636.png

Simple file. (sorry, I did not clean previous)
bad shading edit1.blend

Should look like this. Smoothed normals ![42023030.png](https://archive.blender.org/developer/F8601560/42023030.png) ![42040737.png](https://archive.blender.org/developer/F8601589/42040737.png) ———————————————————— Looks like this ![42012130.png](https://archive.blender.org/developer/F8601561/42012130.png) ![42032636.png](https://archive.blender.org/developer/F8601586/42032636.png) Simple file. (sorry, I did not clean previous) [bad shading edit1.blend](https://archive.blender.org/developer/F8601585/bad_shading_edit1.blend)

Last daily build have same issue.

  Blender 2.90.0 Alpha
  June 08, 00:00:19 - 281319653e5b
  Windows 64 bit 173.68MB
Last daily build have same issue. ``` Blender 2.90.0 Alpha June 08, 00:00:19 - 281319653e5b Windows 64 bit 173.68MB ```

Added subscriber: @Jewls

Added subscriber: @Jewls

In #77312 we have a similar problem but it looks like modifier releated.

In #77312 we have a similar problem but it looks like modifier releated.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Indeed, a strange regression. Since there is no mention of it in the release logs I'm assuming it is a bug.

Indeed, a strange regression. Since there is no mention of it in the release logs I'm assuming it is a bug.

If I add normal edit modifier even without autosmooth, it fixes normals.
It is strange too,
42085044.png
42095344.png

If I add normal edit modifier even without autosmooth, it fixes normals. It is strange too, ![42085044.png](https://archive.blender.org/developer/F8601958/42085044.png) ![42095344.png](https://archive.blender.org/developer/F8601957/42095344.png)
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

deaff945d0 is first bad commit

deaff945d0 is first bad commit

its quite interresting some objects will displayed normal some not.

its quite interresting some objects will displayed normal some not.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @Udjanii

Added subscriber: @Udjanii

I am having the same problem, everything works fine on 2.83, but on 2.9 the shading in edit mode is broken, even for older projects.

Windows 10, and latest nvidia drivers.

Edit mode with auto smooth set to 180, and edit mode without auto smooth.

Screenshot_3.jpg

brokenshading.zip

I am having the same problem, everything works fine on 2.83, but on 2.9 the shading in edit mode is broken, even for older projects. Windows 10, and latest nvidia drivers. Edit mode with auto smooth set to 180, and edit mode without auto smooth. ![Screenshot_3.jpg](https://archive.blender.org/developer/F8632434/Screenshot_3.jpg) [brokenshading.zip](https://archive.blender.org/developer/F8632433/brokenshading.zip)

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

Hi! I have the same weird shading behavior with ALL my mesh in Blender 2.90 since the very first alpha versions. (Running Windows 10, 64 bits, GPU: Geforce 1080, Geforce 1070, 32 gb ram)

Here's a screenshot of mesh looking weird with sub-d modifier turned off:
image.png

Now, I've turned it on and went to edit mode:

image.png

Notice changes. Weirdly if I set auto-smooth settings and ramp it up to something like 180 degrees it will smooth shade the object correctly. This has something to do with smooth shading. It is completely broken in 2.90 and I have observed this problem since the very first version of 2.90.

Here's the video of the bug:
2020-06-20 21-48-02.mp4

This has to be an issue with smooth shading in 2.90. All mesh objects are affected even the ones that were created solely in 2.90 version, so it's not a matter of corrupted files.

P.S. latest version of Blender is used:

image.png

UPDATE:

In material mode this weird shading bug looks like this:

image.png

Hi! I have the same weird shading behavior with ALL my mesh in Blender 2.90 since the very first alpha versions. (Running Windows 10, 64 bits, GPU: Geforce 1080, Geforce 1070, 32 gb ram) Here's a screenshot of mesh looking weird with sub-d modifier turned off: ![image.png](https://archive.blender.org/developer/F8633888/image.png) Now, I've turned it on and went to edit mode: ![image.png](https://archive.blender.org/developer/F8633893/image.png) Notice changes. Weirdly if I set auto-smooth settings and ramp it up to something like 180 degrees it will smooth shade the object correctly. This has something to do with smooth shading. It is completely broken in 2.90 and I have observed this problem since the very first version of 2.90. Here's the video of the bug: [2020-06-20 21-48-02.mp4](https://archive.blender.org/developer/F8633922/2020-06-20_21-48-02.mp4) This has to be an issue with **smooth shading** in 2.90. All mesh objects are affected even the ones that were created solely in 2.90 version, so it's not a matter of corrupted files. P.S. latest version of Blender is used: ![image.png](https://archive.blender.org/developer/F8633905/image.png) UPDATE: In material mode this weird shading bug looks like this: ![image.png](https://archive.blender.org/developer/F8633949/image.png)

Temporary workaround: enable autosmooth with 180° for full smooth.

Temporary workaround: enable autosmooth with 180° for full smooth.

This issue was referenced by f8c8a5c092

This issue was referenced by f8c8a5c092c4d3a8f523a00776a07f6f9c4c022d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-22 08:46:09 +02:00

Added subscribers: @AndreasLutsch, @mano-wii

Added subscribers: @AndreasLutsch, @mano-wii
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77607
No description provided.