Fix T77607: Edit-mode shading regression 2.90

Regression in deaff945d0b9